--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -66,15 +66,15 @@
   "loginError" : "خطأ في تسجيل الدخول.",
   "addedAnimalSuccessfully" : "تم اضافة الحيوان بنجاح",
   "processError" : "حدثت مشكله اثناء العمليه, برجاء المحاوله مره اخرى",
+  "chooseStrongerPassword" : "يجب ان تكون كلمة المرور اكثر من 10 حروف او ارقام",
   "selectyourcountrycode" : "اختر كود الدولة الخاص بك",
   "pleaseSelectCountryCode": "الرجاء تحديد كود الدولة",
   "done" : "تم",
   "verifyYourEmailWhatsapp" : "تحقق من بريدك الالكتروني بواسطة واتساب",
-  "step1" : "1. تأكد من ادخال رقم صحيح",
-  "step2" : "2. انقر على الرابط التالي",
-  "step3" : "3. قم بارسال الرمز التحقيقي",
-  "step4" : "4. العودة الى التطبيق",
-  "step5" : "5. انقر على تم",
+  "step1" : "1. تحقق من صندوق بريدك الالكتروني",
+  "step2" : "2. قم بتأكيد البريد الالكتروني",
+  "step3" : "3. قم بالعودة الى التطبيق",
+  "step4" : "4. انقر على تم",
   "pleaseEnterThisField" : "الرجاء ادخال هذا الحقل",
   "id" : "الرمز التعريفي",
   "askForAdoption" : "طلب للتبني",
@@ -94,6 +94,14 @@
   "thisOrderIsRefused" : "هذا الطلب مرفوض",
   "thisOrderIsPending" : "هذا الطلب معلق, يرجى الانتظار",
   "purchaseNow" : "ادفع الان",
-  "toCompleteYourOrderPleaseDoThePaymentProcess" : "لاكمال الطلب الخاص بك، يرجى تنفيذ عملية الدفع"
+  "toCompleteYourOrderPleaseDoThePaymentProcess" : "لاكمال الطلب الخاص بك، يرجى تنفيذ عملية الدفع",
+  "youDidNotPostAnyAnimal" : "لم تقم بنشر اي حيوان أليف",
+  "thereIsNoAnimalWithThisName" : "لا يوجد حيوان بهذا الاسم",
+  "yourRequestHasBeenSentSuccessfully" : "تم ارسال الطلب بنجاح",
+  "thereIsNoResultsInThisPage" : "لا يوجد نتائج في هذه الصفحة",
+  "youCanMoveToTheNextPage" : "يمكنك الانتقال الي الصفحة التالية",
+  "thereIsNoAnimalsAddedYet" : "لم يتم اضافة اي حيوانات بعد",
+  "resend" : "اعادة الارسال",
+  "confirmYourEmail" : "تاكيد بريدك الالكتروني"
 
 }
