--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -66,15 +66,15 @@
   "loginError" : "Login failed.",
   "addedAnimalSuccessfully" : "Added animal successfully",
   "processError" : "Something went wrong, please try again",
+  "chooseStrongerPassword" : "Choose stronger password",
   "selectyourcountrycode" : "Select your country code",
   "pleaseSelectCountryCode": "Please select country code",
   "done" : "Done",
   "verifyYourEmailWhatsapp": "Verify your email with whatsapp",
-  "step1": "1. Ensure that you enter a valid phone number.",
-  "step2": "2. Click on the link below.",
-  "step3": "3. Send the code to verify.",
-  "step4": "4. Return to the app.",
-  "step5": "5. Click on done.",
+  "step1": "1. Check your email in your inbox.",
+  "step2": "2. Verify your email.",
+  "step3": "3. Return to the app.",
+  "step4": "4. Click on done.",
   "pleaseEnterThisField": "Please enter this field",
   "id" : "ID",
   "askForAdoption" : "Ask for adoption",
@@ -94,5 +94,13 @@
   "thisOrderIsRefused" : "This order is refused",
   "thisOrderIsPending" : "This order is pending",
   "purchaseNow" : "Purchase Now",
-  "toCompleteYourOrderPleaseDoThePaymentProcess" : "To complete your order, please do the purchase process"
+  "toCompleteYourOrderPleaseDoThePaymentProcess" : "To complete your order, please do the purchase process",
+  "youDidNotPostAnyAnimal" : "You did not post any animal",
+  "thereIsNoAnimalWithThisName" : "There is no animal with this name",
+  "yourRequestHasBeenSentSuccessfully" : "Your request has been sent successfully",
+  "thereIsNoResultsInThisPage" : "There is no results in this page",
+  "youCanMoveToTheNextPage" : "You can move to the next page",
+  "thereIsNoAnimalsAddedYet" : "There is no animals added yet",
+  "resend" : "Resend",
+  "confirmYourEmail" : "Confirm your email"
 }
